charts/sauce-connect: use ConfigMap for sc configuration
Without this patch we are limited to a few hand-picked config option.

To solve that we render ConfigMap from config dict.
This allows users to paste existing sc yaml configurations to values.yaml.
This approach requires no translation and is forward compatible.

Fixes SC-4573

--- a/charts/sauce-connect/values.yaml
+++ b/charts/sauce-connect/values.yaml
@@ -51,20 +51,18 @@ tolerations: []
 affinity: {}
 
 # Sauce Connect Proxy Configuration
-sc:
+# See https://docs.saucelabs.com/dev/cli/sauce-connect-5/run for more options
+config:
   region: "us-west"
-  # user must be defined
-  user: ""
+  # username must be defined
+  username: ""
   # accessKey must be defined
-  accessKey: ""
-  # It's recommended to define your own tunnelName
-  tunnelName: "sc-k8s-tunnel"
-  tunnelPool: "true"
-  logLevel: "info"
-# It's recommended to define your own tunnelName
-tunnelName: "sc-k8s-tunnel"
-tunnelPool: "true"
-scLogLevel: "info"
+  access-key: ""
+  # tunnel-name must be defined
+  tunnel-name: "sc-k8s-tunnel"
+  tunnel-pool: "true"
+  # enable api server, needed for k8s readiness/liveness probes
+  api-address: :8032
 
 # See https://docs.saucelabs.com/secure-connections/sauce-connect/proxy-tunnels/#configuring-status-server
 api:
