--- a/charts/sauce-connect/templates/deployment.yaml
+++ b/charts/sauce-connect/templates/deployment.yaml
@@ -34,21 +34,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           env:
-            - name: SAUCE_REGION
-              value: {{ .Values.sc.region | quote }}
-            - name: SAUCE_USERNAME
-              value: {{ .Values.sc.user | quote }}
-            - name: SAUCE_ACCESS_KEY
-              value: {{ .Values.sc.accessKey | quote }}
-            - name: SAUCE_API_ADDRESS
-              value: "0.0.0.0:{{ .Values.api.port }}"
-            - name: SAUCE_TUNNEL_NAME
-              value: {{ .Values.sc.tunnelName | quote }}
-            - name: SAUCE_TUNNEL_POOL
-              value: {{ .Values.tunnelPool | quote }}
-            - name: SAUCE_LOG_LEVEL
-              value: {{ .Values.sc.logLevel | quote }}
+            - name: SAUCE_CONFIG_FILE
+              value: /etc/config/sauce-connect.yaml
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+            - name: config-volume
+              mountPath: /etc/config
           ports:
             - name: api
               containerPort: {{ .Values.api.port }}
@@ -68,6 +59,10 @@ spec:
             periodSeconds: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: config-volume
+          configMap:
+            name: {{ include "sauce-connect.fullname" . }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
