--- a/charts/sauce-connect/templates/deployment.yaml
+++ b/charts/sauce-connect/templates/deployment.yaml
@@ -36,6 +36,10 @@ spec:
           env:
             - name: SAUCE_CONFIG_FILE
               value: /etc/config/sauce-connect.yaml
+            - name: GOMEMLIMIT
+              valueFrom:
+                resourceFieldRef:
+                  resource: limits.memory
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: config-volume
