charts/sauce-connect: fix liveness and readiness check
Fixes SC-4584

--- a/charts/sauce-connect/templates/service.yaml
+++ b/charts/sauce-connect/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.api.port }}
-      targetPort: tcp
+      targetPort: api
       protocol: TCP
-      name: tcp
+      name: api
   selector:
     {{- include "sauce-connect.selectorLabels" . | nindent 4 }}
