charts/sauce-connect: configure api address by api
Use api.port to configure api-address flag, this way the configuration can be done in one place only.

--- a/charts/sauce-connect/templates/deployment.yaml
+++ b/charts/sauce-connect/templates/deployment.yaml
@@ -36,6 +36,8 @@ spec:
           env:
             - name: SAUCE_CONFIG_FILE
               value: /etc/config/sauce-connect.yaml
+            - name: SAUCE_API_ADDRESS
+              value: :{{ .Values.api.port }}
             - name: GOMEMLIMIT
               valueFrom:
                 resourceFieldRef:
