--- a/charts/sauce-connect/tests/deployment_test.yaml
+++ b/charts/sauce-connect/tests/deployment_test.yaml
@@ -7,7 +7,7 @@ chart:
   version: 0.1.0+test
   appVersion: 1.0.0
 tests:
-  - it: should pass all kinds of assertion
+  - it: should pass all assertions
     template: templates/deployment.yaml
     documentIndex: 0
     asserts: # (3)
@@ -34,3 +34,8 @@ tests:
           of: Deployment
       - isAPIVersion:
           of: apps/v1
+      - contains:
+          path: spec.template.spec.containers[?(@.name == "sauce-connect")].env
+          content:
+            value: "true"
+            name: SAUCE_TUNNEL_POOL
