--- a/charts/sauce-connect/values.yaml
+++ b/charts/sauce-connect/values.yaml
@@ -60,9 +60,8 @@ config:
   access-key: ""
   # tunnel-name must be defined
   tunnel-name: "sc-k8s-tunnel"
-  tunnel-pool: "true"
 
-# See https://docs.saucelabs.com/secure-connections/sauce-connect/proxy-tunnels/#configuring-status-server
+# See https://docs.saucelabs.com/secure-connections/sauce-connect-5/operation/api-server/
 api:
   liveness: /healthz
   readiness: /readyz
