--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ name: Test Helm Charts
 on: pull_request # yamllint disable-line rule:truthy
 
 jobs:
-  pipeline:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,3 +17,20 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - run: helm lint charts/sauce-connect
       - run: helm lint charts/sauce-connect-4
+  kubeval-chart:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+    strategy:
+      matrix:
+        k8s:
+          - v1.27
+          - v1.28
+          - v1.29
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Run kubeval
+        env:
+          KUBERNETES_VERSION: ${{ matrix.k8s }}
+        run: .github/kubeval.sh
